Add constellation query
